--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body, html {
   font-size: 70px;
 }
 
+
 .caption2{
   position: absolute;
   top: 65%;
@@ -74,12 +75,32 @@ body, html {
   font-family: "Times New Roman";
 }
 
-h3 {
+
+h3{
   letter-spacing: 5px;
   text-transform: uppercase;
   font: 20px "Arial", sans-serif;
-  color: #111;
+  -webkit-transition: color ease-in 0.3s;
+  -moz-transition: color ease-in 1.0s;
+  -o-transition: color ease-in 1.0s;
+  transition: color ease-in 1.0s;
 }
+
+h3:hover{
+  color: #800020;
+}
+
+p{
+  -webkit-transition: color ease-in 0.3s;
+  -moz-transition: color ease-in 1.0s;
+  -o-transition: color ease-in 1.0s;
+  transition: color ease-in 1.0s;
+}
+
+p:hover{
+  color: #800020;
+}
+
 
 .main {
 	padding: 16px;
